# urho3d-blender-runtime

./: .gitignore  .gitmodules  CMake  CMakeLists.txt  LICENSE  Rakefile  _rewire_links.sh  compile_linux.sh  compile_windows.sh  readme.md  script
android/: .CMakeLists.txt.swp  CMakeLists.txt  script.sh
android/launcher-app/: CMakeLists.txt
android/launcher-app/src/main/assets/saalis-data/Materials/: material-palette.xml
android/launcher-app/src/main/assets/saalis-data/Models/: ArmatureAction.ani  Cube.mdl  Plane.001.mdl  Plane.002.mdl  Plane.003.mdl  Plane.004.mdl  Plane.mdl  Suzanne.mdl  player-lods.mdl  player-mesh.mdl  player.mdl
android/launcher-app/src/main/assets/saalis-data/Objects/: col_player.xml  col_track1.xml
android/launcher-app/src/main/assets/saalis-data/Scenes/: Properties.xml  Scene.xml  tracks.xml
android/t/: CMakeCache.txt
android/urho3d-lib/src/main/java/org/libsdl/app/: SDLActivity.java
misc/_raw/: sample.blend  sample.blend1
src/: Globals.h  Sample.inl  game
src/3rd/: cppzmq  libzmq
src/commonComponents/: CameraFix.cpp  CameraFix.h  Character.h  CharacterController.h  CommonComponents.h  GroupInstance.cpp  GroupInstance.h  NavigationMesh.cpp  NavigationMesh.h  RotationFix.cpp  RotationFix.h
src/commonObjects/: NakamaClient.cpp  NakamaClient.h  NakamaClientEvents.h  PubSubNetwork.cpp  PubSubNetwork.h
src/game/: Main.cpp  Main.h
src/game/gameComponents/: Character.cpp  CharacterController.cpp  GameComponents.h  Global.cpp  Global.h
src/tools/SceneLoader/: BlenderNetwork.cpp  BlenderNetwork.h  CustomEvents.h  SceneLoader.cpp  SceneLoader.h  SceneLoaderComponents.h
src/tools/SceneLoader/LoaderTools/: ComponentExporter.cpp  ComponentExporter.h  GroupInstance.cpp
src/tools/SceneLoader/SampleComponents/: DummyComponent.cpp  DummyComponent.h  PlayAnimation.cpp  PlayAnimation.h  Rotator.cpp  Rotator.h  SampleComponents.h  ShapeKey.cpp  ShapeKey.h
